--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable" : true,
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
+        "php": ">=7.0.0",
         "cyberwings/myanmar-phone-number-php": "dev-master"
     },
     "autoload": {
